# embedding-atlas

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  run.sh
.github/workflows/: ci.yml  deploy-pages.yml
scripts/: check.sh  test.sh
